fixes to white space on right on mobile

--- a/wp-content/themes/hestia/style.css
+++ b/wp-content/themes/hestia/style.css
@@ -1048,13 +1048,12 @@ height: 100%;
   height: 140vh;
   position: relative;
 top: 30px;
-margin-right: 15px;
-margin-left: 15px;
+
 }
 .about-us {
   text-align: left !important;
   margin-top: 10px;
-  padding: 0px 0;
+
   width: 100%
 }
 .fullscreen {
@@ -1166,7 +1165,7 @@ h1.hestia-title,
 h2.title,
 h2.hestia-title {
   margin-bottom: 10px;
-  font-size: 37px !important;
+  font-size: 37px;
 
 }
 h2.hestia-title-contactus {
